# NED-Batch7-Data-Visualization

./: README.md  batch7_datavisualization_pandas.ipynb
01-File-Handling/: code1.ipynb  live_camera.py
02-Docker/: README.md
02-Docker/project1/: Dockerfile  my_code.py
03-poetry/project1/: pyproject.toml
03-poetry/project1/project1/: main.py
03-poetry/project1/tests/: test_main.py
04-Regex(docker compose)/: Dockerfile  docker-compose.yml  readme.md
04-Regex(docker compose)/RegEx/: readme.md
04-Regex(docker compose)/notebooks/: QfYLlL.txt  google.ipynb  re_attendance.ipynb  regex .ipynb  whatsapp.ipynb
04-Regex(docker compose)/notebooks/.ipynb_checkpoints/: google-checkpoint.ipynb  re_attendance-checkpoint.ipynb  regex -checkpoint.ipynb  whatsapp-checkpoint.ipynb
05-postgressSQL/: compose.yaml  readme.md
06_Numpy_pandas/: batch7_dataVisualization_pandas_2ndLast.ipynb
dummy paper/: readme.md
